Tabs look bad in High Contrast theme (fixes #11303)

--- a/src/vs/base/browser/ui/splitview/splitview.css
+++ b/src/vs/base/browser/ui/splitview/splitview.css
@@ -87,7 +87,7 @@
 }
 
 /* High Contrast Theming */
-.hc-black .monaco-split-view > .split-view-view > .header {
+.hc-black .monaco-split-view > .split-view-view:not(:first-child) > .header {
 	border-top: 1px solid #6FC3DF;
 }
 
